# PythonCourse

./: .gitignore  .pre-commit-config.yaml  requirements.txt
integrative-project/: Dockerfile  readme.md  test.db
integrative-project/app/: main.py
module-10-testing-tdd/: .coverage  pytest.ini  readme.md
module-10-testing-tdd/app/: orders.py
module-10-testing-tdd/tests_tdd/: test_orders.py  test_orders_property.py  tests_orders_mock.py
module-11-concurrency-performance/: readme.md
module-11-concurrency-performance/scripts/: compare.py
module-11-concurrency-performance/src/: async_fetcher.py  config.py  cpu_bound.py  sync_fetcher.py  utils.py
module-11-concurrency-performance/tests/: test_fetchers.py
module-12-python-solid-principles/: main.py  readme.md
module-12-python-solid-principles/application/: services.py
module-12-python-solid-principles/domain/: models.py  ports.py
module-12-python-solid-principles/infrastructure/: factory.py  (+2 more)
module-14-data-science/: main.py
module-2-language-fundamentals/: data.json  script.py
module-3-functions-pythonic-programming/: batch.py  main.py  retry.py  timer.py
module-4-object-models/: main.py
module-5-static-typing-and-quality/: main.py  pyproject.toml
module-6-standard-library-and-io/: logger_config.py  main.py  processor.py
module-7-http-api-client-smocker/: client.py  config.py  main.py  users.json
module-8-data-access-orm/: alembic.ini  check.py  dev.py  main.py  test.db
module-9-fastapi-web-apis/: main.py  readme.md
my_project/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
(+61 files in other folders)
