[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Couoh",email = "juan.couoh@axity.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
